--- a/gradle.properties
+++ b/gradle.properties
@@ -1,35 +1,17 @@
 # Build environment
 ## Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
-jdk_version=17
+jdk_version=21
 
 ## Application info
 author=Simple Mocks
-project_name=service-session-local
+project_name=service-session-embedded
 group=com.github.simple-mocks
-version=0.0.2
+version=0.0.3
 
 # service deps
-lib_api_error_version=0.0.7
-lib_api_session_version=0.0.10
+lib_api_error_version=0.0.10
+lib_api_session_version=0.0.12
 
-# 3rd party libraries
-lib_spring_version=6.0.6
-lib_springboot_version=3.0.13
-lib_spring_data_version=3.0.12
-
-lib_flyway_core_version=9.8.3
-lib_sqlite_version=3.45.2.0
-lib_hibernate_community_dialects_version=6.4.4.Final
-lib_caffeine_version=3.1.8
-lib_jackson_version=2.14.2
-lib_commons_lang3_version=3.14.0
-lib_lombok_version=1.18.32
-
-lib_annotation_api_version=3.0.0
-lib_persistence_api_version=3.1.0
-lib_transaction_api_version=2.0.1
-
-# testing libs
-lib_junit_version=5.9.2
-lib_mockito_version=5.2.0
+# spring libraries
+lib_springboot_version=3.3.3
