Fix flyway migration

--- a/src/main/resources/embedded-session-application.properties
+++ b/src/main/resources/embedded-session-application.properties
@@ -1,3 +1,5 @@
 spring.flyway.embedded-session.enabled=true
 spring.flyway.embedded-session.encoding=UTF-8
 spring.flyway.embedded-session.locations=classpath:db/migration/embedded-session
+spring.flyway.embedded-content.default-schema=SESSION_SERVICE
+spring.flyway.embedded-content.schemas=SESSION_SERVICE
