--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.jvmargs=-Xmx2G
 jdk_version=21
 
 ## Application info
-author=Simple Mocks
+author=SibDevTools
 project_name=service-session-embedded
-group=com.github.simple-mocks
-version=0.0.9
+group=com.github.sibdevtools
+version=unspecified
 
 # service deps
-lib_api_common_version=0.0.1
-lib_api_error_version=0.0.15
-lib_api_session_version=0.0.14
+lib_api_common_version=0.0.2
+lib_api_error_version=0.0.16
+lib_api_session_version=0.0.15
 
 # spring libraries
 lib_springboot_version=3.3.3
